--- a/templates/text_create.html
+++ b/templates/text_create.html
@@ -15,27 +15,27 @@
             }
         };
 
+        /*
         function go_back(){
             page = $.urlParam('page');
             //location.href = '/text_board?page=' + page;
             location.replace('/text_board?page=' + page);
         }
+        */
     </script>
 {% endblock %}
 
 {% block content %}
     <div class="container">
 
-        <form method="post" action="/text_board/create">
+        <form method="post" action="/text_board/create?page={{page}}">
 
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
-                    <div class="alert alert-danger" role="alert">
-                        <ul class="flashes">
-                            {% for category, message in messages %}
-                                <li class="{{category}}">{{message}}</li>
-                            {% endfor %}
-                        </ul>
+                    <div class="flashes">
+                        {% for category, message in messages %}
+                            <p class="{{category}} text-center" style="font-size:20px">{{message}}</p>
+                        {% endfor %}
                     </div>
                 {% endif %}
             {% endwith %}
@@ -45,8 +45,8 @@
             </div>
 
             <div class="form-group">
-                <label for="text_register">새로 등록할 텍스트</label>
-                <input type="text" class="form-control" name="text_register", id="text_register">
+                <label for="text_create">새로 등록할 텍스트</label>
+                <input type="text" class="form-control" name="text_create", id="text_create">
             </div>
 
 
@@ -54,7 +54,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-1">
-                        <input type="button" class="btn btn-danger" onclick="go_back()" value="취소">
+                        <input type="button" class="btn btn-danger" onclick="history.back()" value="취소">
                     </div>
 
                     <div class="col-md-1">
