--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -15,13 +15,6 @@
 
 
         $(document).ready(function() {
-
-            $("#mySearch").keyup(function(){
-                var value = $(this).val();
-
-                $("#myTbody a:contains('" + value + "')").parent().parent().show();
-                $("#myTbody a:not(:contains('" + value + "'))").parent().parent().hide();
-            });
         });
 
 
@@ -47,15 +40,20 @@
             var ordering = 1;
 
 
+            //alert('id: ' + id + ' before: ' + before_selected_col + ' ' + asc1_desc0);
+
             if(id == before_selected_col){
-                if(asc1_desc0 == 1)
+                if(asc1_desc0 == 1) {
                     ordering = 0;
-                    
-                else
+                }
+                else {
                     ordering = 1;
+                }
             }
-            else
+            else {
                 ordering = 1;
+            }
+
 
             location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
 
@@ -146,12 +144,85 @@
             <table class="table table-hover" id="myTable">
                 <thead>
                     <tr>
-                        <th style="width : 7%" class="text-center">번호<button class="btn" id="sent_id" onclick="order_text(id,'{{page}}')"><i class="fas fa-sort-up"></i></button></th>
+                        <div>
+                        {% set cname_1 = 'fas fa-sort' %}
+                        {% set cname_2 = 'fas fa-sort' %}
+                        {% set cname_3 = 'fas fa-sort' %}
+                        {% set cname_4 = 'fas fa-sort' %}
+                        {% set cname_5 = 'fas fa-sort' %}
+
+                        {% if asc1_desc0 == '0' and col_name == 'sent_id' %}
+                            {% set cname_1 = 'fas fa-sort-down' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'sent_id' %}
+                            {% set cname_1 = 'fas fa-sort-up' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+
+                        {% elif asc1_desc0 == '0' and col_name == 'article_id' %}
+                            {% set cname_2 = 'fas fa-sort-down' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'article_id' %}
+                            {% set cname_2 = 'fas fa-sort-up' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+
+                        {% elif asc1_desc0 == '0' and col_name == 'article_collected_date' %}
+                            {% set cname_3 = 'fas fa-sort-down' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'article_collected_date' %}
+                            {% set cname_3 = 'fas fa-sort-up' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+
+                        {% elif asc1_desc0 == '0' and col_name == 'text_modified_date' %}
+                            {% set cname_4 = 'fas fa-sort-down' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'text_modified_date' %}
+                            {% set cname_4 = 'fas fa-sort-up' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_5 = 'fas fa-sort' %}
+
+                        {% elif asc1_desc0 == '0' and col_name == 'sent_converted_count' %}
+                            {% set cname_5 = 'fas fa-sort-down' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'sent_converted_count' %}
+                            {% set cname_5 = 'fas fa-sort-up' %}
+                            {% set cname_1 = 'fas fa-sort' %}
+                            {% set cname_2 = 'fas fa-sort' %}
+                            {% set cname_3 = 'fas fa-sort' %}
+                            {% set cname_4 = 'fas fa-sort' %}
+                        {% endif %}
+                        </div>
+                        <th style="width : 7%" class="text-center">번호<button class="btn" id="sent_id" onclick="order_text(id,'{{page}}')"><i class='{{cname_1}}'></i></button></th>
                         <th class="text-center">텍스트</th>
-                        <th style="width : 9%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id, '{{page}}')"><i class="fas fa-sort-up"></i></button></th>
-                        <th style="width : 15%" class="text-center">기사 수집일<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}','{{col_name}}','{{asc1_desc0}}')"><i class="fas fa-sort-up"></i></button></th>
-                        <th style="width : 15%" class="text-center">텍스트 편집일<button class="btn" id="text_modified_date" onclick="order_text(id, '{{page}}','{{col_name}}','{{asc1_desc0}}')"><i class="fas fa-sort-up"></i></button></th>
-                        <th style="width : 9%" class="text-center">수정 횟수<button class="btn" id="sent_converted_count" onclick="order_text(id, '{{page}}','{{col_name}}','{{asc1_desc0}}')"><i class="fas fa-sort-up"></i></button></th>
+                        <th style="width : 9%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id, '{{page}}')"><i class='{{cname_2}}'></i></button></th>
+                        <th style="width : 15%" class="text-center">기사 수집일<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_3}}'></i></button></th>
+                        <th style="width : 15%" class="text-center">텍스트 편집일<button class="btn" id="text_modified_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_4}}'></i></button></th>
+                        <th style="width : 9%" class="text-center">수정 횟수<button class="btn" id="sent_converted_count" onclick="order_text(id, '{{page}}')"><i class='{{cname_5}}'></i></button></th>
                         <th></th>
                     </tr>
                 </thead>
