--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -33,14 +33,11 @@
         function order_text(id, page){
             // 1 이면 오름차순 정렬
             // 0 이면 내림차순 정렬
-
             var url = $(location).attr('href');
             var asc1_desc0 = getParameterByName(url, 'asc1_desc0');
+            var search_msg = getParameterByName(url, 'search_msg');
             var before_selected_col = getParameterByName(url, 'col_name');
             var ordering = 1;
-
-
-            //alert('id: ' + id + ' before: ' + before_selected_col + ' ' + asc1_desc0);
 
             if(id == before_selected_col){
                 if(asc1_desc0 == 1) {
@@ -55,7 +52,14 @@
             }
 
 
-            location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
+            // 검색한 경우 ordering
+            if(search_msg){
+                location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page + "&search_msg=" + search_msg);
+            }
+            // 검색하지 않았을 경우 ordering
+            else{
+                location.replace("/text_board/order?col_name=" + id + "&asc1_desc0=" + ordering + "&page=" + page);
+            }
 
 
         }
@@ -114,17 +118,18 @@
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark" role="navigation">
         <div class="container-fluid">
+
             <form class="form-inline" method="get" action="/text_board/search" role="search">
                 <div class="col-md-10">
                     <div class="form-group">
-                        <input type="text" class="form-control col-md-12" id="SearchText" name="query" placeholder="Search...">
+                        <input type="text" class="form-control col-md-12" id="SearchText" name="search_msg" placeholder="Search...">
+                        <input type="hidden" name="page" value="{{page}}">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary" value="검색">
                 </div>
-
             </form>
 
             <ul class="navbar-nav">
@@ -190,13 +195,13 @@
                             {% set cname_4 = 'fas fa-sort' %}
                             {% set cname_5 = 'fas fa-sort' %}
 
-                        {% elif asc1_desc0 == '0' and col_name == 'text_modified_date' %}
+                        {% elif asc1_desc0 == '0' and col_name == 'sent_modified_date' %}
                             {% set cname_4 = 'fas fa-sort-down' %}
                             {% set cname_1 = 'fas fa-sort' %}
                             {% set cname_2 = 'fas fa-sort' %}
                             {% set cname_3 = 'fas fa-sort' %}
                             {% set cname_5 = 'fas fa-sort' %}
-                        {% elif asc1_desc0 == '1' and col_name == 'text_modified_date' %}
+                        {% elif asc1_desc0 == '1' and col_name == 'sent_modified_date' %}
                             {% set cname_4 = 'fas fa-sort-up' %}
                             {% set cname_1 = 'fas fa-sort' %}
                             {% set cname_2 = 'fas fa-sort' %}
@@ -221,7 +226,7 @@
                         <th class="text-center">텍스트</th>
                         <th style="width : 9%" class="text-center">기사 번호<button class="btn" id="article_id" onclick="order_text(id, '{{page}}')"><i class='{{cname_2}}'></i></button></th>
                         <th style="width : 15%" class="text-center">기사 수집일<button class="btn" id="article_collected_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_3}}'></i></button></th>
-                        <th style="width : 15%" class="text-center">텍스트 편집일<button class="btn" id="text_modified_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_4}}'></i></button></th>
+                        <th style="width : 15%" class="text-center">텍스트 편집일<button class="btn" id="sent_modified_date" onclick="order_text(id, '{{page}}')"><i class='{{cname_4}}'></i></button></th>
                         <th style="width : 9%" class="text-center">수정 횟수<button class="btn" id="sent_converted_count" onclick="order_text(id, '{{page}}')"><i class='{{cname_5}}'></i></button></th>
                         <th></th>
                     </tr>
@@ -234,11 +239,19 @@
 
                         {% if row.sent_confirm == 1 %}
                         <td>
-                            <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_converted}}</a>
+                            {% if search_msg is defined %}
+                                <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_converted}}</a>
+                            {% else %}
+                                <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_converted}}</a>
+                            {% endif %}
                         </td>
                         {% else %}
                         <td>
-                            <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_original}}</a>
+                            {% if search_msg is defined %}
+                                <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}&search_msg={{search_msg}}">{{row.sent_original}}</a>
+                            {% else %}
+                                <a href="/text_board/edit?sent_id={{row.sent_id}}&page={{page}}">{{row.sent_original}}</a>
+                            {% endif %}
                         </td>
                         {% endif %}
 
